src/snapshots/glass__codegen__tests__fn add(a: Int, b: Int) -> Int { a + b }.snap
---
source: src/codegen.rs
expression: compile(source)
---
function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction

function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_add takes integer a, integer b returns integer
    return (a + b)
endfunction
