src/snapshots/glass__codegen__tests__fn double(x: Int) -> Int { add(x, x) }.snap
---
source: src/codegen.rs
expression: compile(source)
---
function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction

function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_double takes integer x returns integer
    return glass_dispatch_2(add, x, x)
endfunction
