src/snapshots/glass__codegen__tests__fn greet(name: String) -> String { "Hello " <> name }.snap
---
source: src/codegen.rs
expression: compile(source)
---
function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction

function glass_greet takes string name returns string
    return ("Hello " + name)
endfunction
