src/snapshots/glass__codegen__tests__fn invert(x: Bool) -> Bool { !x }.snap
---
source: src/codegen.rs
expression: compile(source)
---
function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction

function glass_invert takes boolean x returns boolean
    return not (x)
endfunction
