src/snapshots/glass__codegen__tests__fn is_positive(x: Int) -> Bool { x > 0 }.snap
---
source: src/codegen.rs
expression: compile(source)
---
function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction

function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_is_positive takes integer x returns boolean
    return (x > 0)
endfunction
