src/snapshots/glass__codegen__tests__fn neg(x: Int) -> Int { -x }.snap
---
source: src/codegen.rs
expression: compile(source)
---
function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction

function glass_neg takes integer x returns integer
    return -(x)
endfunction
